# fractals

./: README.md  pyproject.toml
fractals/: mandelbrot.py
